# diff-poetry-lock

./: Dockerfile  Makefile  pyproject.toml
diff_poetry_lock/: github.py  run_poetry.py  settings.py
diff_poetry_lock/test/: test_poetry_diff.py
