[project]
name = "diff-poetry-lock"
version = "2.0.0"
description = "A Github Action that posts a summary of all changes within the poetry.lock file to a pull request"
authors = [
    {name = "Nils Borrmann"}
]
readme = "README.md"
dynamic = [ "dependencies" ]
requires-python = ">=3.10"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^2"
requests = "^2.32.3"
pydantic-settings = "^2.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
types-requests = "^2.32.0.20241016"
mypy = "^1.14.1"
ruff = "^0.8.6"
pytest = "^8.3.4"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 120

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.lint]
select = ["ALL"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D211", "D213",  # missing docstrings
    "TRY002", "TRY003", "EM101", "EM102",  # exception handling
    "T201", # disallow print
    "PTH123",
    "COM812", "D203", "ISC001",  # recommended to ignore by ruff for formatting
]
line-length = 120

[tool.lint.per-file-ignores]
"diff_poetry_lock/test/*" = ["S101", "PLR2004", "S105", "S106"]  # hardcoded values
